<resources>
    <string name="app_name">canivete-suico</string>
    <string name="open_camera">Abrir câmera</string>
    <string name="photos">Ver fotos</string>
    <string name="camera">Câmera</string>
    <string name="compass">Bússola</string>
    <string name="level">Nível</string>
    <string name="descricao_bussola">Imagem de uma bússola</string>
    <string name="delete_all">Apagar todas imagens</string>
    <string name="descricao_level">Imagem tranparente</string>
    <string name="title">Canivete suíço</string>
</resources>