<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/open_camera_button"
        android:layout_width="177dp"
        android:layout_height="46dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="240dp"
        android:text="@string/open_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_photos_button"
        android:layout_width="177dp"
        android:layout_height="46dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="41dp"
        android:text="@string/photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_camera_button" />

    <ImageView
        android:id="@+id/photo_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_photos_button"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/delete_all_pictures_button"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>